# security-agents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/agentic-workflows/: authz-review.md  data-exposure-review.md  dependency-supply-chain-review.md  iac-kubernetes-review.md  secrets-config-review.md  threat-model-review.md
.github/workflows/: pr-finops-review.yml  weekly-estate-analysis.yml
agents/architecture/: README.md
agents/change-risk/: README.md
agents/finops/: README.md  pyproject.toml  requirements.txt
agents/finops/config/: config.yaml.example
agents/finops/entrypoints/: __init__.py  pr_review.py  weekly_analysis.py
agents/finops/models/: __init__.py  recommendation.py
agents/finops/pr/: __init__.py  cost_diff.py  lifecycle_waste.py  sku_sanity.py  tagging.py
agents/finops/tests/: __init__.py  test_entrypoints.py  test_models.py  test_pr_cost_diff.py  test_pr_lifecycle_waste.py  test_pr_sku_sanity.py  test_pr_tagging.py  test_recommendation_prioritiser.py  test_weekly_anomaly_trend.py  test_weekly_collectors.py  test_weekly_github_integration.py  test_weekly_operational_finops.py  test_weekly_report.py  test_weekly_reservation.py  test_weekly_rightsizing.py  test_weekly_waste_orphan.py
agents/finops/weekly/: __init__.py  advisor_collector.py  anomaly_trend.py  cost_data_collector.py  estate_inventory.py  github_integration.py  metrics_collector.py  operational_finops.py  recommendation_prioritiser.py  report.py  reservation.py  rightsizing.py  subscription_discovery.py  waste_orphan.py
agents/k8s/: README.md
agents/observability/: README.md
agents/reliability/: README.md
agents/security/: authz-review.md  data-exposure-review.md  dependency-supply-chain-review.md  iac-kubernetes-review.md  pr-security-review.md  secrets-config-review.md  threat-model-review.md
agents/security/policies/: blocking-policy.md  finding-schema.md  prompt-injection-hardening.md  secure-review-principles.md
agents/security/taxonomies/: mitre-usage-guidance.md  owasp-mapping.md
distributions/copilot-extension/: .gitignore  README.md  copilot-extension.yml  package.json
distributions/copilot-extension/src/: agents.ts  handler.ts  index.ts
distributions/mcp-server/: README.md  pyproject.toml
distributions/mcp-server/examples/: claude-desktop-config.json  vscode-settings.json
distributions/mcp-server/src/agents_mcp/: __init__.py  server.py
examples/consuming-repo/: README.md  pr-security-review.md
examples/github-action/consuming-repo/: README.md  pr-security-review.md
examples/github-action/finops/: README.md  (+2 more)
examples/github-app/: README.md
examples/self-hosted/: README.md
presets/: enterprise.yml  kubernetes.yml  platform-team.yml  startup.yml
security/policies/: blocking-policy.md  false-positive-guidance.md  finding-schema.md  prompt-injection-hardening.md  secure-review-principles.md  severity-rubric.md
security/taxonomies/: cwe-mapping.md
