[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-mcp"
version = "0.1.0"
description = "MCP server exposing lgulliver/agents as prompts and resources for Claude Desktop, VS Code, Cursor, and other MCP hosts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "agents", "security", "copilot", "claude", "finops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
agents-mcp = "agents_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agents_mcp*"]
